# keyring

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  config_spec.toml
.github/workflows/: rust.yml
api/: keyring.yaml
contrib/: test.sh
install/: keyringd.toml
sample/: signed.psbt  test_observer1-20201225-2333.psbt
shell/: _keyring-cli  _keyring-cli.ps1  _keyringd  _keyringd.ps1  keyring-cli.bash  keyringd.bash
src/: constants.rs  error.rs  lib.rs  opts.rs
src/api/: error.rs  message.rs  mod.rs  reply.rs  request.rs  types.rs
src/cli/: client.rs  command.rs  config.rs  error.rs  format.rs  mod.rs  opts.rs  runtime.rs
src/daemon/: config.rs  mod.rs  opts.rs  runtime.rs
src/i9n/: config.rs  mod.rs  runtime.rs
src/rpc/: error.rs  message.rs  mod.rs  reply.rs  request.rs  types.rs
src/vault/: account.rs  accounts.rs  delegated.rs  driver.rs  file.rs  file_driver.rs  keymgm.rs  mod.rs  vault.rs  vaults.rs
