[package]
name = "keyring"
description = "Personal key management server"
version = "0.1.0-beta.1"
license = "AGPL"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
keywords = ["bitcoin", "secp256k1", "ecdsa", "schnorr"]
edition = "2018"
readme = "README.md"

[[bin]]
name = "keyringd"
required-features = ["server"]

[[bin]]
name = "keyring-cli"
required-features = ["integration", "cli"]

[dependencies]
# Rust language
amplify = "~1.1.1"
amplify_derive = "~1.1.1"
lazy_static = "~1.4.0"
# Serialization & parsing
serde = { version = "~1.0.111", features = ["derive"] }
serde_with = "~1.4.0"
serde_json = { version = "~1.0.55", optional = true }
serde_yaml = { version = "~0.8.13", optional = true }
toml = { version = "~0.5.6", optional = true }
bech32 = { version = "~0.7.2", optional = true }
base64 = { version = "~0.12.1", optional = true }
regex = { version = "~1.3.9", optional = true }
# Congig
settings = { version = "~0.10.1", package = "config", optional = true }
dotenv = { version = "~0.15.0", optional = true }
clap = { version = "=3.0.0-beta.2", optional = true }
# Logging
log = { version = "~0.4.8", optional = true, features = ["max_level_trace", "release_max_level_debug"] }
env_logger = { version = "~0.7.1", optional = true }
tiny_http = { version = "~0.7.0", optional = true }
prometheus = { version = "~0.9.0", optional = true }
# Processes & IPC
async-trait = "~0.1.35"
tokio = { version = "~0.2.21", features = ["full"] }
zmq = "~0.9.2"
# Utilitary
num-traits = "~0.2.11"
num-derive = "~0.3.0"

[dependencies.lnpbp]
git = "https://github.com/LNP-BP/rust-lnpbp"
branch = "master"
features = ["lnp", "keygen", "elgamal", "tokio", "serde", "tor", "url", "websockets"]

[dependencies.lnpbp_derive]
git = "https://github.com/lnp-bp/rust-lnpbp"
branch = "master"

[patch.crates-io]
bitcoin = { git = "https://github.com/LNP-BP/rust-bitcoin", branch = "develop" }
bitcoin_hashes = { git = "https://github.com/LNP-BP/bitcoin_hashes", tag = "lnpbp-v0.1.0-beta-4" }
lightning = { git = "https://github.com/LNP-BP/rust-lightning", branch = "develop", optional = true }
miniscript = { git = "https://github.com/LNP-BP/rust-miniscript", branch = "develop" }

[features]
default = []
all = ["daemon", "integration", "monitoring"]
server = ["daemon"] # Server is a standalone application that runs daemon
                    # Besides server daemon can be run as a part of mobile app
                    # and other types of clients; thus `server` != `daemon`
daemon = ["shell"]  # This feature results in building with secure Vault and
                    # other features, not required for CLI
integration = []    # Integration is require to any applications that talk to
                    # daemon processes
cli = ["shell", "base64"]
shell = ["dotenv", "clap", "settings", "serde_json", "serde_yaml", "toml",
         "bech32", "log", "regex", "env_logger", "amplify/parse_arg"]
monitoring = ["prometheus", "tiny_http"]
