[package]
name = "keyring_node"
description = "Personal key management server"
version = "0.1.0-beta.2"
license = "AGPL-3.0-only"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
keywords = ["bitcoin", "secp256k1", "ecdsa", "schnorr"]
edition = "2018"
readme = "README.md"
exclude = [".github", "/doc", "/test", "/data", "Dockerfile"]

[lib]
name = "keyring"

[[bin]]
name = "keyringd"
required-features = ["server"]

[[bin]]
name = "keyring-cli"
required-features = ["cli"]

[dependencies]
# Rust language
amplify = "3"
amplify_derive = "2.4.2"
lnpbp = { version = "0.3", features = ["elgamal"] }
bitcoin = { version = "0.26", features = ["rand"] }
slip132 = "0.3.0-rc.1"
internet2 = "0.3"
microservices = "0.3"
# Rust language
lazy_static = "~1.4.0"
chrono = "~0.4.19"
# Serialization & parsing
serde_crate = { package = "serde", version = "~1.0.106", features = ["derive"], optional = true }
serde_with = { version = "~1.5.1", optional = true, features = ["hex"] }
serde_json = { version = "~1.0.55", optional = true }
serde_yaml = { version = "~0.8.13", optional = true }
toml = { version = "~0.5.6", optional = true }
bech32 = { version = "~0.7.2", optional = true }
base64 = { version = "~0.12.1", optional = true }
url = { version = "~2.1.1", optional = true }
# Congig & logging
settings = { version = "~0.10.1", package = "config", optional = true }
configure_me = { version = "0.3.4", optional = true }
dotenv = { version = "~0.15.0", optional = true }
clap = { version = "=3.0.0-beta.2", optional = true }
log = { version = "~0.4.8", optional = true, features = ["max_level_trace", "release_max_level_debug"] }
env_logger = { version = "~0.7.1", optional = true }
colored = { version = "~2.0.0", optional = true }
shellexpand = { version = "~2.0.0", optional = true }
# Processes & IPC
zmq = { version = "~0.9.2", optional = true }

[build-dependencies]
amplify = "~2.4.0"
amplify_derive = "~2.4.2"
lnpbp = "0.3"
bitcoin = "0.26"
slip132 = "0.3.0-rc.1"
internet2 = "0.3"
microservices = { version = "0.3", features = ["cli"] }
serde_crate = { package = "serde", version = "~1.0.106", features = ["derive"] }
lazy_static = "~1.4.0"
clap = "=3.0.0-beta.2"
clap_generate = "=3.0.0-beta.2"
log = { version = "~0.4.8", features = ["max_level_trace", "release_max_level_debug"] }
shellexpand = "~2.0.0"
configure_me_codegen = "~0.3.14"

[target.'cfg(target_os="android")'.dependencies]
zmq = { version = "~0.9", features = ["vendored"] }

# Recommended set of features:
# 1. Standalone node: `server` (=`node`+`shell`)
# 2. Cli to remote node: `cli` (auto includes `shell` and `integration`)
# 3. Mobile app talking to a server: `client`
# 4. Mobile app with embedded node: `embedded` (auto includes `client` + `node`)
# 5. Simple cli utility app: `shell`
[features]
default = ["client"]
# Server is a standalone application that runs daemon
server = ["node", "shell", "microservices/server", "serde"]
# Feature is required for any applications that talks to daemon processes
client = ["zmq", "microservices/client", "bitcoin/rand",
          "url", "internet2/url"]
# Embedded is an app that contains ndoe in itself and that talks to it through
# integration layer
embedded = ["client", "node", "microservices/embedded",
            "log", "clap", "settings", "shellexpand"]
# Command-line application feature
cli = ["shell", "client", "microservices/cli", "base64"]
# Required for all apps that can be launched from command-line shell as binaries
# (i.e. both servers and cli)
shell = [
    "dotenv", "clap", "settings", "configure_me", "log", "env_logger", "serde",
    "amplify/parse_arg", "microservices/shell", "shellexpand", "colored"
]
# Besides server node can be run as a part of mobile app
# and other types of clients; thus `server` != `node`.
# This feature results in building with features not required for CLI
node = ["serde", "bitcoin/rand", "zmq", "microservices/node",
        "url", "internet2/url"]
serde = ["serde_crate", "serde_with", "serde_yaml", "toml",
         "amplify/serde", "lnpbp/serde", "microservices/serde", "chrono/serde",
         "slip132/serde"]

[package.metadata.configure_me]
spec = "config_spec.toml"
